# license-fetcher

./: .aider.conf.yml  .aiderignore  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  build.rs  cSpell.json  codebook.toml  cog.toml  license-fetcher.code-workspace  taskfile.yml
.github/: labeler.yml
.github/workflows/: benchmark-pr.yml  cargo-audit.yml  coverage.yml  criterion.yml  find-msrv.yml  fossa.yml  pr-label.yml  pr-sec.yml  pr.yml  test.yml
.zed/: settings.json
benches/: bench.rs
docs/: build_config.md  lib.md
flicense/: Cargo.toml  README.md
flicense/src/: main.rs
img/timings/: test-lf-v0.10.0-release.html  timings-v0.10.0-rc.1.html
license-fetcher/: .gitignore  README.md  build.rs
license-fetcher-cli/: Cargo.toml
license-fetcher/src/: lib.rs
license-fetcher/src/build_script/: mod.rs
src/: config.rs  error.rs  lib.rs  prelude.rs
src/build_script/: cache.rs  cargo_source.rs  git.rs  github.rs  metadata.rs  mod.rs
tests/: metadata_test.json  test.rs  test_generate_licenses.rs
tests/common/: mod.rs
tests/test_buildscript/: Cargo.toml  LICENSE  build.rs
tests/test_buildscript/src/: main.rs
tests/test_crate/: Cargo.toml
