[package]
name = "license-fetcher"
description = "Fetch licenses of dependencies at build time and embed them into your program."
authors = ["Adam McKellar <dev@mckellar.eu>"]
version = "0.7.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/WyvernIXTL/license-fetcher"
license = "BSL-1.0"
keywords = ["license", "embed", "fetch", "about", "find"]
exclude = [
    "/tests",
    "/benches",
    "/img",
    "/.vscode",
    "/.github",
    "/build.rs",
    "/cSpell.json",
    "/lic-fetcher.code-workspace",
    "/taskfile.yml"
]


[dependencies]
bincode = "2.0.1"
directories = {version = "6.0.0", optional = true}
error-stack = { version = "0.5.0", optional = true}
log = { version = "0.4.22", optional = true }
miniz_oxide = { version = "0.8.0", features = ["std"]}
regex-lite = { version = "0.1.6", optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", optional = true }
simplelog = { version = "0.12.2", optional = true, default-features = false}
thiserror = { version = "2.0.12", optional = true }
toml = { version = "0.8.21", optional = true, default-features = false, features = ["parse"]}

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.0"
simplelog = "0.12.2"

[features]
default = []
build = ["dep:serde_json", "dep:serde", "dep:log", "dep:directories", "dep:thiserror", "dep:regex-lite", "dep:error-stack"]
config_from_path = ["dep:toml"]


[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
features = ["build", "config_from_path"]
rustdoc-args = ["--cfg", "docsrs"]
