[package]
name = "license-fetcher"
description = "Fetch licenses of dependencies at build time and embed them into your program."
authors = ["Adam McKellar <dev@mckellar.eu>"]
version = "0.9.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/WyvernIXTL/license-fetcher"
license = "MPL-2.0"
keywords = ["license", "embed", "fetch", "about", "find"]
categories = ["development-tools::build-utils", "parsing"]
exclude = [
    "/tests",
    "/benches",
    "/img",
    "/.vscode",
    "/.zed",
    "/.github",
    "/build.rs",
    "/taskfile.yml",
]

[profile.flame]
inherits = "bench"
debug = true


[dependencies]
directories = {version = "6.0.0", optional = true}
error-stack = { version = "0.5.0", optional = true}
log = { version = "0.4.22", optional = true}
lz4_flex = { version = "0.13.0", default-features = false, features = ["checked-decode"]}
nanoserde = { version = "0.2.1", default-features = false, features = ["std", "json", "binary"] }
regex-lite = { version = "0.1.6", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.0"
simplelog = "0.12.2"
supports-color = "3.0.2"

[features]
default = []
build = [ "dep:log", "dep:directories", "dep:regex-lite", "dep:error-stack"]
serde = ["dep:serde"]


[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
