[package]
name = "license-fetcher"
description = "Fetch licenses of dependencies at build time and embed them into your program."
authors = ["Adam McKellar <dev@mckellar.eu>"]
version = "0.9.3"
edition = "2024"
readme = "README.md"
repository = "https://github.com/WyvernIXTL/license-fetcher"
license = "MPL-2.0"
keywords = ["license", "embed", "fetch", "about", "find"]
categories = ["development-tools::build-utils", "parsing"]
include = [
    "build.rs",
    "src/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md"
]

[profile.flame]
inherits = "bench"
debug = true


[dependencies]
exn = { version = "0.3.1", optional = true }
log = { version = "0.4.32", optional = true}
lz4_flex = { version = "0.13.1", default-features = false, features = ["checked-decode"]}
nanoserde = { version = "0.2.1", default-features = false, features = ["std", "json", "binary"] }
regex-lite = { version = "0.1.9", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
textwrap = { version = "0.16.2", default-features = false }

[dev-dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
arbtest = "0.3.2"
assert2 = "0.4.0"
criterion = "0.8.2"
serial_test = "3.5.0"
simplelog = "0.12.2"
tempfile = "3.27.0"

[features]
default = []
build = [ "dep:log", "dep:regex-lite", "dep:exn"]
serde = ["dep:serde"]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges.maintenance]
status = "actively-developed"
