[package]
name = "flicense"
description = "CLI for printing license information of rust cargo projects to the terminal."
authors = ["Adam McKellar <dev@mckellar.eu>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/WyvernIXTL/license-fetcher"
license = "BSL-1.0"
keywords = ["license", "fetch", "about", "find"]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
colored = "3.0.0"
license-fetcher = { version = "0.5.0", path = "../license-fetcher", features = ["build"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yml = "0.0.12"
toml = "0.8.19"

