[package]
name = "license-fetcher-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
license-fetcher = { version = "0.5.0", path = "../license-fetcher", features = ["build"], default-features = false }

[[bin]]
name = "flicense"
