[package]
name = "test_crate"
authors = ["Max Mustermann"]
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"
homepage = "https://example.com"

[dependencies]
bincode = "2.0.1"
directories = "6.0.0"
log = "0.4.27"
miniz_oxide = "0.8.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
